syntax = "proto3";
import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";
import "Protos/Common/common.proto";

option csharp_namespace = "Booking.API";

package booking;

//booking manipulation grpc service
service BookingService {
  rpc CreateBooking (CreateRequest) returns (common.Response);
  rpc DeleteBooking (common.Request) returns (common.Response);
  //handle booking statuses
  rpc AcceptBooking (common.Request) returns (common.Response);
  rpc RejectBooking (common.Request) returns (common.Response);
  rpc CancelBooking (common.Request) returns (common.Response);
  //handle booking retrieval
  rpc GetBookingsForGuest (common.Request) returns (BookingListResponse);
  rpc GetBookingsForPost (common.Request) returns (BookingListResponse);
  rpc GetBookingDetails (common.Request) returns (BookingInfoResponse);
}

message CreateRequest {
	google.protobuf.Int64Value guestId = 1;
	google.protobuf.Int64Value postId = 2;
	google.protobuf.Int32Value guestNo = 3;
	google.protobuf.Timestamp startDateTimeStamp = 4;
	google.protobuf.Timestamp endDateTimeStamp = 5;
}

message BookingInfoResponse {
 int64 id=1;
 int64 guestId=2;
 Post post =3;
 int32 guestNo = 4;
 google.protobuf.Timestamp startDateTimeStamp = 5;
 google.protobuf.Timestamp endDateTimeStamp = 6;
 int32 status = 7;
 bool noItem = 8;

}
message BookingListResponse {
repeated BookingInfoResponse items = 1;
}

message Post {
   int64 id = 1;
   int64 ownerId = 2;
   int32 maxGuestsNo = 3;
}
